--- a/chatty_server/package.json
+++ b/chatty_server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.16.2",
+    "node-fetch": "^2.0.0",
     "randomcolor": "^0.5.3",
     "uuid": "^3.2.1",
     "ws": "4.0.0"
